--- a/tpl/Makefile
+++ b/tpl/Makefile
@@ -3,13 +3,13 @@ CXX = g++
 CFLAGS = -Wall -O0 -fPIC
 CXXFLAGS = -Wall -O0 -fPIC
 LIBS = -lsodium -lpwgen -ldraw
-LDFLAGS = -L. -L/home/lizeren/Desktop/VLSI-TPL-Detect-Tool/tpl/lib -Wl,-rpath,/home/lizeren/Desktop/VLSI-TPL-Detect-Tool/tpl/lib
+TPL_PATH = /home/lizeren/Desktop/VLSI-TPL-Detect-Tool/tpl/lib
+LDFLAGS = -L. -L$(TPL_PATH) -Wl,-rpath,$(TPL_PATH)
 
 PWGEN_SRCS = pwgen/pw_phonemes.c pwgen/pw_rand.c pwgen/randnum.c pwgen/sha1.c pwgen/sha1num.c pwgen/pwgen.c
 PWGEN_OBJS = $(PWGEN_SRCS:.c=.o)
 
-DRAW_SRCS = draw/draw.cpp
-DRAW_OBJS = $(DRAW_SRCS:.cpp=.o)
+DRAW_OBJS = draw/draw.o
 
 all: libpwgen.so libdraw.so password_generator
 
@@ -28,8 +28,8 @@ libdraw.so: $(DRAW_OBJS)
 password_generator: test.cpp libpwgen.so libdraw.so
 	$(CXX) $(CXXFLAGS) $< -o $@ $(LDFLAGS) $(LIBS)
 
-run_password_generator: password_generator
-	LD_LIBRARY_PATH=/home/lizeren/Desktop/VLSI-TPL-Detect-Tool/tpl/lib:$$LD_LIBRARY_PATH ./password_generator
+run: password_generator
+	LD_LIBRARY_PATH=$(TPL_PATH):$$LD_LIBRARY_PATH ./password_generator
 
 clean:
 	rm -f $(PWGEN_OBJS) $(DRAW_OBJS) libpwgen.so libdraw.so password_generator
